# android-feature-detection

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/sandbox/org/featuredetection/activity/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ImageRecognizer.cpp  ImageRecognizer.h  native-lib.cpp
app/src/main/java/sandbox/org/featuredetection/activity/: MainActivity.java
app/src/main/java/sandbox/org/featuredetection/camera/: CameraUtilOldAPI.java  CameraWrapper.java  CameraWrapperOldAPI.java  CanvasSurfaceView.java  CanvasView.java  ICameraWrapper.java
app/src/main/java/sandbox/org/featuredetection/jni/: NativeWrapper.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/sandbox/org/featuredetection/activity/: ExampleUnitTest.java
